--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Información sobre Países</h1>
   <div id="countries-list"></div>
+    <ul id="lista"></ul>
 
   <script src="./js/script.js"></script>
 </body>
