--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <h1>Información sobre Países</h1>
-  <div id="countries-list"></div>
-    <ul id="lista"></ul>
+  <div id="paises-mundo"></div>
+    <div id="countries-list"></div>
+      <button id="abrir"></button>
+    <div id="countries-information"></div>
+      <button id="cerrar"></button>
+     
 
   <script src="./js/script.js"></script>
 </body>
