--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
   <h1>Información sobre Países</h1>
-  <div id="paises-mundo"></div>
-    <div id="countries-list"></div>
-      <button id="abrir"></button>
-    <div id="countries-information"></div>
-      <button id="cerrar"></button>
-     
-
+  <div id="paises-mundo">
+    <div id="countries-list">
+    </div>
+    <div id="countries-information">
+    </div>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 </html>
